src/test/deca/avecObjet/valid/method_param_shadow_field_ok copy.deca
// Description :
//    Paramètre de méthode masquant un champ.
//
// Resultats :
//    OK

class A {
    int x;

    void set(int x) {
        println(x);
    }
}

{
    A a = new A();
    a.set(3);
}

