src/test/deca/avecObjet/invalid/stack_overflow.deca
// Description :
//    Récursion infinie pour provoquer un débordement de pile.
//
// Resultats :
//    Erreur : Debordement de pile

class A {
    void suicide() {
        suicide();
    }
}

{
    A a = new A();
    a.suicide();
}